# sp1-raffle

./: Cargo.toml  README.md
lib/: Cargo.toml
lib/src/: raffle.rs
programs/per-raffle-proof/: README.md
programs/per-raffle-proof/contracts/src/fixtures/: groth16-fixture.json
programs/per-raffle-proof/program/: Cargo.toml
programs/per-raffle-proof/program/elf/: riscv32im-succinct-zkvm-elf
programs/per-raffle-proof/program/src/: main.rs
programs/per-raffle-proof/script/: Cargo.toml
programs/per-user-proof/: README.md
programs/per-user-proof/contracts/src/fixtures/: groth16-fixture.json
programs/per-user-proof/program/: Cargo.toml
programs/per-user-proof/program/elf/: riscv32im-succinct-zkvm-elf
programs/per-user-proof/program/src/: main.rs
programs/per-user-proof/script/: Cargo.toml
