[package]
name = "raffle-lib"
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "raffle_lib"
path = "src/raffle.rs"

[dependencies]
alloy-sol-types = { workspace = true }
sp1-zkvm = { workspace = true }
sha2-v0-9-8 = { version = "0.9.8", package = "sha2" }

[patch.crates-io]
sha2-v0-9-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-sha2-v0.9.8" }
