[package]
name = "per-raffle-proof-script"
default-run = "per-raffle-proof-script"
version = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "per-raffle-proof-script"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[dependencies]
sp1-sdk = { workspace = true }
alloy-sol-types = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }

[build-dependencies]
sp1-helper = { workspace = true }
